<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="no_login">does not have a login?</string>
    <string name="enter_username">username</string>
    <string name="enter_password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="severly_underweight">severly_underweight 16 - 17</string>
    <string name="underweight">underweight 17 - 18.5</string>
    <string name="normal">normal 18.5 - 25</string>
    <string name="obese">obese 30 - 35</string>
    <string name="header">BMI Calculator</string>
    <string name="username_for_signup">username</string>
    <string name="overweight">overweight 25 - 30</string>
    <string name="age">age:</string>
    <string name="gender">gender:</string>
    <string name="height">height:(in cm)</string>
    <string name="weight">weight:(in kg)</string>
    <string name="female">female</string>
    <string name="male">male</string>


    <string name="Header">BMI Calculator</string>
    <string name="OverWeight">OverWeight</string>
    <string name="Statement1">Your BMI is in the range of OverWeight</string>
    <string name="Diet">Diet</string>
    <string name="Diet_plan_journal">Diet Plan Journal</string>
    <string name="Exercises">Exercises</string>
    <string name="Exercise_plan_journal">Exercise Plan Journal</string>
    <string name="Back">Back</string>
    <string name="Add_record">Add record</string>
    <string name="Week_number">Week Number</string>
    <string name="Average_workout">Average Workout Time(s)</string>
    <string name="Initial_weight">Initial Weight(kg)</string>
    <string name="New_weight">New Weight(kg)</string>
    <string name="Weight_loss">Weight Loss(kg)</string>
    <string name="Insert">Insert</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Search">Search</string>
    <string name="Overweight_diet">OverWeight Diet</string>
    <string name="OverWeight_Exercises">OverWeight Exercises</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editTextNumberSigned">editTextNumberSigned</string>
    <string name="buttonView">View</string>
    <string name="Date">Date</string>
    <string name="Time">TIme</string>


    <string name="underweighttopic">BMI Calculator</string>
    <string name="underweightstate">BMI Calculator</string>
    <string name="Text1">BMI Calculator</string>
    <string name="Buttondiet">BMI Calculator</string>
    <string name="Buttondietj">BMI Calculator</string>
    <string name="Buttonex">BMI Calculator</string>
    <string name="Buttonexj">BMI Calculator</string>
    <string name="underweightDiettopic">BMI Calculator</string>
    <string name="underweightDietstate">BMI Calculator</string>
    <string name="diet1">BMI Calculator</string>
    <string name="diet2">BMI Calculator</string>
    <string name="diet3">BMI Calculator</string>
    <string name="diet4">BMI Calculator</string>
    <string name="Backbtn">BMI Calculator</string>
    <string name="dietPlanj">BMI Calculator</string>
    <string name="dietPlanj2">BMI Calculator</string>
    <string name="dietjournal">BMI Calculator</string>
    <string name="weekPlan">BMI Calculator</string>
    <string name="monthPlan">BMI Calculator</string>
    <string name="diet">BMI Calculator</string>
    <string name="radioButton1">BMI Calculator</string>
    <string name="radioButton2">BMI Calculator</string>
    <string name="radioButton3">BMI Calculator</string>
    <string name="seekBar1">BMI Calculator</string>
    <string name="zerotextView10">BMI Calculator</string>
    <string name="caltextView12">BMI Calculator</string>
    <string name="numtextView11">BMI Calculator</string>
    <string name="dietTable">BMI Calculator</string>
    <string name="inserbtn">BMI Calculator</string>
    <string name="updatebtn">BMI Calculator</string>
    <string name="deletebtn">BMI Calculator</string>
    <string name="exerText">BMI Calculator</string>
    <string name="underExer">BMI Calculator</string>
    <string name="exweek1">BMI Calculator</string>
    <string name="exweek2">BMI Calculator</string>
    <string name="exweek3">BMI Calculator</string>
    <string name="exweek4">BMI Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="under">Hello blank fragment</string>
    <string name="changeUnderweightExercisesFragment">fragment1</string>
    <string name="exercise1">WEEK1</string>
    <string name="exercise2">WEEK2</string>
    <string name="exercise3">WEEK3</string>
    <string name="exercise4">WEEK4</string>
    <string name="Diet1">WEEK1</string>
    <string name="Diet2">WEEK2</string>
    <string name="Diet3">WEEK3</string>
    <string name="Diet4">WEEK4</string>


</resources>